--- a/sass/pages/_contact-page.scss
+++ b/sass/pages/_contact-page.scss
@@ -46,7 +46,7 @@
             }
         }
         img{
-            max-height: 601px;
+            max-height: 608px;
         }
     }
 }
