--- a/sass/partials/_theme-default.scss
+++ b/sass/partials/_theme-default.scss
@@ -243,7 +243,7 @@ input.theme-btn {
     display: inline-flex;
     align-items: center;
   }
-  @include sm {
+  @include rmaxwd(991) {
     padding: 12px 34px;
   }
   &:hover {
